<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/llWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white_alpha_i_60"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btnSpeak"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_volume_selector"
            android:padding="0dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tvViet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/ear"
            android:textColor="@color/crimson"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/sysbol_dot"
            android:textColor="@color/crimson"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ear_vn"
            android:textColor="@color/crimson"
            android:textSize="22sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llWord"
        android:horizontalSpacing="5dp"
        android:numColumns="3"
        android:stretchMode="columnWidth" >
    </GridView>

</RelativeLayout>